logistic regression test

--- a/Project/Song Lin/gpt-2.ipynb
+++ b/Project/Song Lin/gpt-2.ipynb
@@ -183,6 +183,161 @@
     "X = np.load('X.npy')\n",
     "y = np.load('y.npy')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import MultinomialNB, GaussianNB\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, LSTM, GRU, Embedding, Dropout\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from transformers import TFDistilBertForSequenceClassification\n",
+    "\n",
+    "# Define models\n",
+    "models = {\n",
+    "    \"Logistic Regression\": LogisticRegression(),\n",
+    "    \"Multinomial Naive Bayes\": MultinomialNB(),\n",
+    "    \"Gaussian Naive Bayes\": GaussianNB(),\n",
+    "    \"SVM\": SVC(),\n",
+    "    \"Decision Tree\": DecisionTreeClassifier(),\n",
+    "    \"Random Forest\": RandomForestClassifier(),\n",
+    "    \"Gradient Boosting\": GradientBoostingClassifier(),\n",
+    "}\n",
+    "\n",
+    "# Define a simple RNN model (use with padded sequences)\n",
+    "def create_rnn_model(input_length):\n",
+    "    model = Sequential()\n",
+    "    model.add(Embedding(input_dim=10000, output_dim=128, input_length=input_length))\n",
+    "    model.add(SimpleRNN(128))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "models[\"RNN\"] = create_rnn_model(input_length=your_padded_sequence_length)\n",
+    "\n",
+    "# Define a simple LSTM model (use with padded sequences)\n",
+    "def create_lstm_model(input_length):\n",
+    "    model = Sequential()\n",
+    "    model.add(Embedding(input_dim=10000, output_dim=128, input_length=input_length))\n",
+    "    model.add(LSTM(128))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "models[\"LSTM\"] = create_lstm_model(input_length=your_padded_sequence_length)\n",
+    "\n",
+    "# Define a simple GRU model (use with padded sequences)\n",
+    "def create_gru_model(input_length):\n",
+    "    model = Sequential()\n",
+    "    model.add(Embedding(input_dim=10000, output_dim=128, input_length=input_length))\n",
+    "    model.add(GRU(128))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "models[\"GRU\"] = create_gru_model(input_length=your_padded_sequence_length)\n",
+    "\n",
+    "# Define a DistilBERT model (use with encoded input from the Hugging Face tokenizer)\n",
+    "def create_distilbert_model():\n",
+    "    model = TFDistilBertForSequenceClassification.from_pretrained('distilbert-base-uncased', num_labels=2)\n",
+    "    model.compile(optimizer='adam', loss=model.compute_loss, metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "models[\"DistilBERT\"] = create_distilbert_model()\n",
+    "\n",
+    "# You can also include other transformer-based models like BERT, GPT, RoBERTa, etc.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BertTokenizer, TFBertForSequenceClassification\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "\n",
+    "def tokenize(text):\n",
+    "    inputs = tokenizer(text, return_tensors='tf', padding='max_length', truncation=True, max_length=512)\n",
+    "    return inputs\n",
+    "\n",
+    "# Assuming 'data' is a pandas DataFrame with columns 'text' (article text) and 'label' (binary label for genuine/fake news)\n",
+    "data['inputs'] = data['text'].apply(tokenize)\n",
+    "\n",
+    "def create_bert_model():\n",
+    "    model = TFBertForSequenceClassification.from_pretrained('bert-base-uncased', num_labels=2)\n",
+    "    optimizer = Adam(learning_rate=2e-5, epsilon=1e-08)\n",
+    "    model.compile(optimizer=optimizer, loss=model.compute_loss, metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "models[\"BERT\"] = create_bert_model()\n",
+    "\n",
+    "X = np.stack(data['inputs'].values)\n",
+    "y = data['label'].values\n",
+    "\n",
+    "# Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
+    "# Train the model\n",
+    "models[\"BERT\"].fit(X_train, y_train, batch_size=16, epochs=3, validation_split=0.1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import GPT2Tokenizer, TFGPT2LMHeadModel, GPT2Config\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.models import Model\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
+    "\n",
+    "def tokenize(text):\n",
+    "    inputs = tokenizer(text, return_tensors='tf', padding='max_length', truncation=True, max_length=512)\n",
+    "    return inputs\n",
+    "\n",
+    "# Assuming 'data' is a pandas DataFrame with columns 'text' (article text) and 'label' (binary label for genuine/fake news)\n",
+    "data['inputs'] = data['text'].apply(tokenize)\n",
+    "\n",
+    "def create_gpt2_model():\n",
+    "    gpt2_config = GPT2Config.from_pretrained('gpt2', output_hidden_states=True)\n",
+    "    gpt2_model = TFGPT2LMHeadModel.from_pretrained('gpt2', config=gpt2_config)\n",
+    "\n",
+    "    # Define the classification head\n",
+    "    input_ids = tf.keras.layers.Input(shape=(512,), dtype=tf.int32)\n",
+    "    attention_mask = tf.keras.layers.Input(shape=(512,), dtype=tf.int32)\n",
+    "    outputs = gpt2_model(input_ids, attention_mask=attention_mask)\n",
+    "    hidden_states = outputs.hidden_states[-1][:, 0]\n",
+    "    classification_output = Dense(2, activation='softmax')(hidden_states)\n",
+    "\n",
+    "    # Combine GPT-2 and the classification head\n",
+    "    model = Model(inputs=[input_ids, attention_mask], outputs=classification_output)\n",
+    "    model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "models[\"GPT-2\"] = create_gpt2_model()\n",
+    "X = np.stack(data['inputs'].values)\n",
+    "y = data['label'].values\n",
+    "\n",
+    "# Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
+    "# Train the model\n",
+    "models[\"GPT-2\"].fit(X_train, y_train, batch_size=8, epochs=3, validation_split=0.1)\n"
+   ]
   }
  ],
  "metadata": {
