eda the data with date and test recommand

--- a/Project/Song Lin/tweepy_test.ipynb
+++ b/Project/Song Lin/tweepy_test.ipynb
@@ -153,6 +153,63 @@
     "        print(tweet.full_text)\n",
     "        print(\"=====\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import pandas as pd\n",
+    "import tweepy\n",
+    "\n",
+    "API_KEY = \"xUzeP0cM2EQpzXtfc6p5Cdn3U\"\n",
+    "API_SECRET_KEY = \"8kr9rCSdNa1tQXOrcZp83igjp1Us4ku2MAUmGbGNV9BESEXSul\"\n",
+    "ACCESS_TOKEN = \"1643372708930129921-PDNyDI1L1BkIMInIONCDzLaZHqswTb\"\n",
+    "ACCESS_TOKEN_SECRET = \"5TI6zsahJGT1IF3W6ZVuJCUM15Igxsa1So9pfIbmz3Et7\"\n",
+    "\n",
+    "auth = tweepy.OAuth1UserHandler(\n",
+    "  API_KEY, \n",
+    "  API_SECRET_KEY, \n",
+    "  ACCESS_TOKEN, \n",
+    "  ACCESS_TOKEN_SECRET\n",
+    ")\n",
+    "\n",
+    "api = tweepy.API(auth)\n",
+    "\n",
+    "# Define keywords related to fake news\n",
+    "keywords = ['#news'] #[\"fake news\", \"misinformation\", \"disinformation\", \"hoax\"]\n",
+    "\n",
+    "# Use the Twitter API to search for tweets containing the keywords\n",
+    "tweets = []\n",
+    "for keyword in keywords:\n",
+    "    results = api.search_tweets(keyword, tweet_mode=\"extended\")\n",
+    "    tweets.extend(results)\n",
+    "\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    # Convert to lowercase\n",
+    "    text = text.lower()\n",
+    "    \n",
+    "    # Remove punctuation and non-alphabetic characters\n",
+    "    #text = re.sub(r\"[^a-zA-Z\\s]\", \"\", text)\n",
+    "    return text\n",
+    "\n",
+    "# Extract the full text of each tweet and preprocess the text\n",
+    "texts = []\n",
+    "for tweet in tweets:\n",
+    "    try:\n",
+    "        text = tweet.retweeted_status.full_text\n",
+    "    except AttributeError:\n",
+    "        text = tweet.full_text\n",
+    "    preprocessed_text = preprocess_text(text)\n",
+    "    texts.append(preprocessed_text)\n",
+    "\n",
+    "# Save the preprocessed texts to a CSV file\n",
+    "data = pd.DataFrame({\"text\": texts})\n",
+    "data.to_csv(\"fake_news_data.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
