add cells to save model

--- a/Project/Jialiang Guo/BERT_based_model/BERT-based.ipynb
+++ b/Project/Jialiang Guo/BERT_based_model/BERT-based.ipynb
@@ -1752,6 +1752,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7cb22278",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), \"BERT_based.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c4869f58",
    "metadata": {},
    "outputs": [],
