--- a/Project/Jialiang Guo/GPT2_based_model/GPT2-based.ipynb
+++ b/Project/Jialiang Guo/GPT2_based_model/GPT2-based.ipynb
@@ -1333,6 +1333,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74f47709",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), \"GPT2_based.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e0f43194",
    "metadata": {},
    "outputs": [],
