add auto lable py

--- a/Project/Song Lin/openai_test.ipynb
+++ b/Project/Song Lin/openai_test.ipynb
@@ -58,10 +58,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              tweet_id         username   \n",
+      "0  1645205292580237312   CryptoNewswire  \\\n",
+      "1  1645205278227300354    chicagopatty1   \n",
+      "2  1645205278034653185       PointmanRT   \n",
+      "3  1645205277141258241     fix_newspeak   \n",
+      "4  1645205245444898816        indahadrr   \n",
+      "5  1645205238129762309       NeversNews   \n",
+      "6  1645205207318675456  Istkhar45996309   \n",
+      "7  1645205191245938691   himalaya_times   \n",
+      "8  1645205183398543360      theSundaily   \n",
+      "\n",
+      "                                                text   \n",
+      "0  ftx failure rooted in hubris and greed debtors...  \\\n",
+      "1  former abc producer faces child pornography ch...   \n",
+      "2  b2b socialmedia business news newsupdate organ...   \n",
+      "3  pastrnaks 58th has the bruins on the verge of ...   \n",
+      "4  siswi smp di kabupaten jeneponto sulawesi sela...   \n",
+      "5  actuellement sur nevers news pop rock nowplayi...   \n",
+      "6                palestinianlivesmatter london news    \n",
+      "7   india number himalayatimes nepalihimalayatime...   \n",
+      "8  work from home is attractive to some employers...   \n",
+      "\n",
+      "                                               links  label  \n",
+      "0                        ['https://t.co/DXPoDBAEUm']      1  \n",
+      "1                        ['https://t.co/j1gi3ujIi5']      1  \n",
+      "2                        ['https://t.co/weMLnxGUw0']      1  \n",
+      "3                        ['https://t.co/uGqgT7LHo6']      1  \n",
+      "4  ['https://t.co/jopiTsy11l', 'https://t.co/OOWP...      1  \n",
+      "5                        ['https://t.co/wPB3SSpgUQ']      1  \n",
+      "6                        ['https://t.co/RSZDSLuDPc']      1  \n",
+      "7                        ['https://t.co/okqk8sdwyW']      1  \n",
+      "8                        ['https://t.co/WtKx1V9mcG']      1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import openai\n",
+    "import pandas as pd\n",
+    "\n",
+    "openai.api_key = \"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\"\n",
+    "\n",
+    "def check_truthfulness(prompt):\n",
+    "    stop = [\"and\", \"but\", \"however\", \"despite\"]\n",
+    "    response = openai.Completion.create(\n",
+    "        engine=\"davinci\",\n",
+    "        prompt=prompt + \"Just give me true or false\",\n",
+    "        max_tokens=256,\n",
+    "        n=1,\n",
+    "        stop=stop,\n",
+    "        temperature=0.5,\n",
+    "    )\n",
+    "    return response.choices[0].text.strip()\n",
+    "\n",
+    "# Load data from fake_news_data.csv\n",
+    "data = pd.read_csv(\"fake_news_data.csv\")\n",
+    "\n",
+    "labeled_data = []\n",
+    "for index, row in data.iterrows():\n",
+    "    text = row['text']\n",
+    "    result = check_truthfulness(text)\n",
+    "    if \"true\" in result.lower():\n",
+    "        label = 0\n",
+    "    else:\n",
+    "        label = 1\n",
+    "    labeled_data.append((row['tweet_id'], row['username'], text, row['links'], label))\n",
+    "\n",
+    "labeled_df = pd.DataFrame(labeled_data, columns=[\"tweet_id\", \"username\", \"text\", \"links\", \"label\"])\n",
+    "print(labeled_df)\n",
+    "labeled_df.to_csv(\"labeled_fake_news_data.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
@@ -80,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
