--- a/Project/Song Lin/get_twitter_data.ipynb
+++ b/Project/Song Lin/get_twitter_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,89 @@
     "    results = api.search_tweets(keyword, tweet_mode=\"extended\")\n",
     "    tweets.extend(results)\n",
     "\n",
+    "def remove_emoji(string):\n",
+    "    emoji_pattern = re.compile(\n",
+    "        \"[\"\n",
+    "        \"\\U0001F600-\\U0001F64F\"  # emoticons\n",
+    "        \"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
+    "        \"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
+    "        \"\\U0001F1E0-\\U0001F1FF\"  # flags (iOS)\n",
+    "        \"\\U00002702-\\U000027B0\"\n",
+    "        \"\\U000024C2-\\U0001F251\"\n",
+    "        \"]+\",\n",
+    "        flags=re.UNICODE,\n",
+    "    )\n",
+    "    return emoji_pattern.sub(r'', string)\n",
+    "\n",
+    "def extract_links(text):\n",
+    "    links = re.findall(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', text)\n",
+    "    return links\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    text = text.lower()\n",
+    "    text = remove_emoji(text)\n",
+    "    # Remove links\n",
+    "    text = re.sub(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', '', text)\n",
+    "    # Remove special symbols and punctuation\n",
+    "    text = re.sub(r\"[^a-zA-Z0-9\\s]\", \"\", text)\n",
+    "    return text\n",
+    "\n",
+    "texts = []\n",
+    "tweet_ids = []\n",
+    "usernames = []\n",
+    "links = []\n",
+    "for tweet in tweets:\n",
+    "    try:\n",
+    "        text = tweet.retweeted_status.full_text\n",
+    "    except AttributeError:\n",
+    "        text = tweet.full_text\n",
+    "    preprocessed_text = preprocess_text(text)\n",
+    "    extracted_links = extract_links(text)\n",
+    "    texts.append(preprocessed_text)\n",
+    "    tweet_ids.append(tweet.id)\n",
+    "    usernames.append(tweet.user.screen_name)\n",
+    "    links.append(extracted_links)\n",
+    "\n",
+    "data = pd.DataFrame({\"tweet_id\": tweet_ids, \"username\": usernames, \"text\": texts, \"links\": links})\n",
+    "data.to_csv(\"fake_news_data.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import pandas as pd\n",
+    "import tweepy\n",
+    "import configparser\n",
+    "\n",
+    "# Read the configuration file\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read(\"config.ini\")\n",
+    "\n",
+    "# Get the API keys and tokens from the configuration file\n",
+    "API_KEY = config[\"twitter\"][\"API_KEY\"]\n",
+    "API_SECRET_KEY = config[\"twitter\"][\"API_SECRET_KEY\"]\n",
+    "ACCESS_TOKEN = config[\"twitter\"][\"ACCESS_TOKEN\"]\n",
+    "ACCESS_TOKEN_SECRET = config[\"twitter\"][\"ACCESS_TOKEN_SECRET\"]\n",
+    "\n",
+    "auth = tweepy.OAuth1UserHandler(\n",
+    "    API_KEY,\n",
+    "    API_SECRET_KEY,\n",
+    "    ACCESS_TOKEN,\n",
+    "    ACCESS_TOKEN_SECRET\n",
+    ")\n",
+    "\n",
+    "api = tweepy.API(auth)\n",
+    "\n",
+    "keywords = ['#news']\n",
+    "\n",
+    "tweets = []\n",
+    "for keyword in keywords:\n",
+    "    results = api.search_tweets(keyword, tweet_mode=\"extended\")\n",
+    "    tweets.extend(results)\n",
     "\n",
     "def remove_emoji(string):\n",
     "    emoji_pattern = re.compile(\n",
@@ -52,35 +135,59 @@
     "    )\n",
     "    return emoji_pattern.sub(r'', string)\n",
     "\n",
+    "def extract_links(text):\n",
+    "    links = re.findall(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', text)\n",
+    "    return links\n",
     "\n",
     "def preprocess_text(text):\n",
     "    text = text.lower()\n",
     "    text = remove_emoji(text)\n",
+    "    # Remove links\n",
+    "    text = re.sub(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', '', text)\n",
     "    # Remove special symbols and punctuation\n",
     "    text = re.sub(r\"[^a-zA-Z0-9\\s]\", \"\", text)\n",
+    "    # Remove multiple consecutive spaces\n",
+    "    text = re.sub(r'\\s{2,}', ' ', text)\n",
     "    return text\n",
     "\n",
     "texts = []\n",
     "tweet_ids = []\n",
     "usernames = []\n",
+    "links = []\n",
     "for tweet in tweets:\n",
     "    try:\n",
     "        text = tweet.retweeted_status.full_text\n",
     "    except AttributeError:\n",
     "        text = tweet.full_text\n",
     "    preprocessed_text = preprocess_text(text)\n",
+    "    extracted_links = extract_links(text)\n",
     "    texts.append(preprocessed_text)\n",
     "    tweet_ids.append(tweet.id)\n",
     "    usernames.append(tweet.user.screen_name)\n",
+    "    links.append(extracted_links)\n",
     "\n",
-    "data = pd.DataFrame({\"tweet_id\": tweet_ids, \"username\": usernames, \"text\": texts})\n",
+    "data = pd.DataFrame({\"tweet_id\": tweet_ids, \"username\": usernames, \"text\": texts, \"links\": links})\n",
     "data.to_csv(\"fake_news_data.csv\", index=False)\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "gt",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
