--- a/Project/Jialiang Guo/data_integration.ipynb
+++ b/Project/Jialiang Guo/data_integration.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1505c508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,19 +12,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "71565547",
    "metadata": {},
    "outputs": [],
    "source": [
     "liar_data = pd.read_csv('liar_data.csv')\n",
     "pheme_data = pd.read_csv('pheme_data.csv')\n",
-    "buzzfeed_data = pd.read_csv('buzzfeed_data.csv')"
+    "buzzfeed_data = pd.read_csv('buzzfeed_data.csv')\n",
+    "kaggle_data_true = pd.read_csv('Kaggle_True.csv')\n",
+    "kaggle_data_fake = pd.read_csv('Kaggle_Fake.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e3c71c3c",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +196,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2f126265",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +300,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "788b0d6c",
    "metadata": {},
    "outputs": [
     {
@@ -423,8 +420,215 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>As U.S. budget fight looms, Republicans flip t...</td>\n",
+       "      <td>WASHINGTON (Reuters) - The head of a conservat...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>December 31, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>U.S. military to accept transgender recruits o...</td>\n",
+       "      <td>WASHINGTON (Reuters) - Transgender people will...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>December 29, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Senior U.S. Republican senator: 'Let Mr. Muell...</td>\n",
+       "      <td>WASHINGTON (Reuters) - The special counsel inv...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>December 31, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FBI Russia probe helped by Australian diplomat...</td>\n",
+       "      <td>WASHINGTON (Reuters) - Trump campaign adviser ...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>December 30, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Trump wants Postal Service to charge 'much mor...</td>\n",
+       "      <td>SEATTLE/WASHINGTON (Reuters) - President Donal...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>December 29, 2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  As U.S. budget fight looms, Republicans flip t...   \n",
+       "1  U.S. military to accept transgender recruits o...   \n",
+       "2  Senior U.S. Republican senator: 'Let Mr. Muell...   \n",
+       "3  FBI Russia probe helped by Australian diplomat...   \n",
+       "4  Trump wants Postal Service to charge 'much mor...   \n",
+       "\n",
+       "                                                text       subject  \\\n",
+       "0  WASHINGTON (Reuters) - The head of a conservat...  politicsNews   \n",
+       "1  WASHINGTON (Reuters) - Transgender people will...  politicsNews   \n",
+       "2  WASHINGTON (Reuters) - The special counsel inv...  politicsNews   \n",
+       "3  WASHINGTON (Reuters) - Trump campaign adviser ...  politicsNews   \n",
+       "4  SEATTLE/WASHINGTON (Reuters) - President Donal...  politicsNews   \n",
+       "\n",
+       "                 date  \n",
+       "0  December 31, 2017   \n",
+       "1  December 29, 2017   \n",
+       "2  December 31, 2017   \n",
+       "3  December 30, 2017   \n",
+       "4  December 29, 2017   "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kaggle_data_true.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Donald Trump Sends Out Embarrassing New Year’...</td>\n",
+       "      <td>Donald Trump just couldn t wish all Americans ...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>December 31, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Drunk Bragging Trump Staffer Started Russian ...</td>\n",
+       "      <td>House Intelligence Committee Chairman Devin Nu...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>December 31, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sheriff David Clarke Becomes An Internet Joke...</td>\n",
+       "      <td>On Friday, it was revealed that former Milwauk...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>December 30, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Trump Is So Obsessed He Even Has Obama’s Name...</td>\n",
+       "      <td>On Christmas day, Donald Trump announced that ...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>December 29, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pope Francis Just Called Out Donald Trump Dur...</td>\n",
+       "      <td>Pope Francis used his annual Christmas Day mes...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>December 25, 2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0   Donald Trump Sends Out Embarrassing New Year’...   \n",
+       "1   Drunk Bragging Trump Staffer Started Russian ...   \n",
+       "2   Sheriff David Clarke Becomes An Internet Joke...   \n",
+       "3   Trump Is So Obsessed He Even Has Obama’s Name...   \n",
+       "4   Pope Francis Just Called Out Donald Trump Dur...   \n",
+       "\n",
+       "                                                text subject  \\\n",
+       "0  Donald Trump just couldn t wish all Americans ...    News   \n",
+       "1  House Intelligence Committee Chairman Devin Nu...    News   \n",
+       "2  On Friday, it was revealed that former Milwauk...    News   \n",
+       "3  On Christmas day, Donald Trump announced that ...    News   \n",
+       "4  Pope Francis used his annual Christmas Day mes...    News   \n",
+       "\n",
+       "                date  \n",
+       "0  December 31, 2017  \n",
+       "1  December 31, 2017  \n",
+       "2  December 30, 2017  \n",
+       "3  December 29, 2017  \n",
+       "4  December 25, 2017  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kaggle_data_fake.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "c2351abc",
    "metadata": {},
    "source": [
     "## Extract Text and Label"
@@ -432,7 +636,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baed27c0",
    "metadata": {},
    "source": [
     "### liar_data"
@@ -440,22 +643,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "75304d79",
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    10284\n",
+       "1     2507\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "liar_data = liar_data[['label','statement']]\n",
     "# transfer \"half_true\",\"mostly_true\", etc to \"true\"\n",
     "liar_data['label'] = liar_data['label'].replace(to_replace='.*true.*', value='true', regex=True)\n",
     "liar_data['label'] = liar_data['label'].replace(to_replace='.*liar.*', value='false', regex=True)\n",
     "liar_data['label'] = pd.get_dummies(liar_data['label'])['false']\n",
-    "liar_data = liar_data.rename(columns={'statement': 'text'})"
+    "liar_data = liar_data.rename(columns={'statement': 'text'})\n",
+    "\n",
+    "liar_data['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Solve the dataset imbalance problem\n",
+    "# from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
+    "# liar_y = liar_data['label']\n",
+    "# liar_X = liar_data.drop(columns=['label'])\n",
+    "\n",
+    "# oversampler = RandomOverSampler(random_state=42)\n",
+    "# X_resampled, y_resampled = oversampler.fit_resample(liar_X, liar_y)\n",
+    "\n",
+    "# liar_data_balanced = pd.concat([X_resampled, y_resampled], axis=1)\n",
+    "# liar_data_balanced\n",
+    "# # liar_0 = liar_data[liar_data['label'] == 0]\n",
+    "# # liar_1 = liar_data[liar_data['label'] == 1]\n",
+    "\n",
+    "# # liar_0_sampled = liar_0.sample(n=4000)\n",
+    "\n",
+    "# # liar_data_balanced = pd.concat([liar_0_sampled, liar_1])\n",
+    "# # liar_data_balanced"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bf8e31ab",
    "metadata": {},
    "source": [
     "### pheme_data"
@@ -463,17 +705,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "249ae7e3",
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    4023\n",
+       "1    2402\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pheme_data = pheme_data[['label','text']]"
+    "pheme_data = pheme_data[['label','text']]\n",
+    "pheme_data['label'].value_counts()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8b2c998e",
    "metadata": {},
    "source": [
     "### buzzfeed_data"
@@ -481,22 +735,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7a69b5f6",
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    91\n",
+       "1    91\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: consider whether merge title into text\n",
     "\n",
     "buzzfeed_data['label'] = pd.get_dummies(buzzfeed_data['type'])['Fake']\n",
     "# only use title\n",
-    "buzzfeed_data = buzzfeed_data[['title','label']].rename(columns={'title': 'text'})"
+    "buzzfeed_data = buzzfeed_data[['title','label']].rename(columns={'title': 'text'})\n",
+    "\n",
+    "buzzfeed_data['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### kaggle_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1045a747",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaggle_data_true['label'] = ['True']*len(kaggle_data_true)\n",
+    "kaggle_data_fake['label'] = ['Fake']*len(kaggle_data_fake)\n",
+    "\n",
+    "kaggle_data = pd.concat([kaggle_data_true, kaggle_data_fake], axis=0).reset_index()[['title','label']]\n",
+    "kaggle_data['label'] = pd.get_dummies(kaggle_data['label'])['Fake']\n",
+    "kaggle_data = kaggle_data.rename(columns={'title': 'text'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +851,7 @@
        "4      0  The economic turnaround started at the end of ..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,8 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3e7bdb5b",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +929,7 @@
        "4      1  Passenger plane carrying 148 people crashes in..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,8 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0800761f",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +1007,7 @@
        "4  President Obama Vetoes 9/11 Victims Bill, Sett...      0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,8 +1017,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>As U.S. budget fight looms, Republicans flip t...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>U.S. military to accept transgender recruits o...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Senior U.S. Republican senator: 'Let Mr. Muell...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FBI Russia probe helped by Australian diplomat...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Trump wants Postal Service to charge 'much mor...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  label\n",
+       "0  As U.S. budget fight looms, Republicans flip t...      0\n",
+       "1  U.S. military to accept transgender recruits o...      0\n",
+       "2  Senior U.S. Republican senator: 'Let Mr. Muell...      0\n",
+       "3  FBI Russia probe helped by Australian diplomat...      0\n",
+       "4  Trump wants Postal Service to charge 'much mor...      0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kaggle_data.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "7cb0c6d2",
    "metadata": {},
    "source": [
     "## Concat Data"
@@ -740,8 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5589d6ef",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -808,20 +1170,19 @@
        "4      0  The economic turnaround started at the end of ..."
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.concat([liar_data, pheme_data, buzzfeed_data], axis=0)\n",
+    "data = pd.concat([liar_data, pheme_data, buzzfeed_data, kaggle_data], axis=0)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "548b5538",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,9 +1193,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py-gt",
    "language": "python",
-   "name": "python3"
+   "name": "py-gt"
   },
   "language_info": {
    "codemirror_mode": {
@@ -846,7 +1207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
