add get news from the big press

--- a/Project/Song Lin/get_twitter_data.ipynb
+++ b/Project/Song Lin/get_twitter_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,11 @@
     "\n",
     "api = tweepy.API(auth)\n",
     "\n",
-    "keywords = ['#news']\n",
+    "keywords = ['#BreakingNews','#Politics','#Sports','#Entertainment','#Technology']\n",
     "\n",
     "tweets = []\n",
     "for keyword in keywords:\n",
-    "    results = api.search_tweets(keyword, tweet_mode=\"extended\")\n",
+    "    results = api.search_tweets(keyword, tweet_mode=\"extended\", lang=\"en\")\n",
     "    tweets.extend(results)\n",
     "\n",
     "def remove_emoji(string):\n",
@@ -51,20 +51,28 @@
     "    )\n",
     "    return emoji_pattern.sub(r'', string)\n",
     "\n",
+    "def extract_hashtags(text):\n",
+    "    hashtags = re.findall(r\"#(\\w+)\", text)\n",
+    "    return hashtags\n",
+    "\n",
     "def extract_links(text):\n",
     "    links = re.findall(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', text)\n",
     "    return links\n",
     "\n",
     "def preprocess_text(text):\n",
     "    text = text.lower()\n",
-    "    text = remove_emoji(text)\n",
+    "    # Extract hashtags\n",
+    "    hashtags = extract_hashtags(text)\n",
     "    # Remove links\n",
     "    text = re.sub(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', '', text)\n",
     "    # Remove special symbols and punctuation\n",
-    "    text = re.sub(r\"[^a-zA-Z0-9\\s]\", \"\", text)\n",
-    "    return text\n",
+    "    text = re.sub(r\"[^a-zA-Z0-9\\s#]\", \"\", text)\n",
+    "    # Remove multiple consecutive spaces\n",
+    "    text = re.sub(r'\\s{2,}', ' ', text)\n",
+    "    return text, hashtags\n",
     "\n",
     "texts = []\n",
+    "hashtags_list = []\n",
     "tweet_ids = []\n",
     "usernames = []\n",
     "links = []\n",
@@ -73,22 +81,34 @@
     "        text = tweet.retweeted_status.full_text\n",
     "    except AttributeError:\n",
     "        text = tweet.full_text\n",
-    "    preprocessed_text = preprocess_text(text)\n",
+    "    preprocessed_text, hashtags = preprocess_text(text)\n",
     "    extracted_links = extract_links(text)\n",
     "    texts.append(preprocessed_text)\n",
+    "    hashtags_list.append(hashtags)\n",
     "    tweet_ids.append(tweet.id)\n",
     "    usernames.append(tweet.user.screen_name)\n",
     "    links.append(extracted_links)\n",
     "\n",
-    "data = pd.DataFrame({\"tweet_id\": tweet_ids, \"username\": usernames, \"text\": texts, \"links\": links})\n",
+    "data = pd.DataFrame({\"tweet_id\": tweet_ids, \"username\": usernames, \"text\": texts, \"hashtags\": hashtags_list, \"links\": links})\n",
     "data.to_csv(\"fake_news_data.csv\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unexpected parameter: lang\n",
+      "Unexpected parameter: lang\n",
+      "Unexpected parameter: lang\n",
+      "Unexpected parameter: lang\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import pandas as pd\n",
@@ -114,11 +134,11 @@
     "\n",
     "api = tweepy.API(auth)\n",
     "\n",
-    "keywords = ['#news']\n",
+    "accounts = ['CNN', 'BBC', 'ABC', 'AP']\n",
     "\n",
     "tweets = []\n",
-    "for keyword in keywords:\n",
-    "    results = api.search_tweets(keyword, tweet_mode=\"extended\")\n",
+    "for account in accounts:\n",
+    "    results = api.user_timeline(screen_name=account, tweet_mode=\"extended\", count=100)\n",
     "    tweets.extend(results)\n",
     "\n",
     "def remove_emoji(string):\n",
@@ -135,22 +155,28 @@
     "    )\n",
     "    return emoji_pattern.sub(r'', string)\n",
     "\n",
+    "def extract_hashtags(text):\n",
+    "    hashtags = re.findall(r\"#(\\w+)\", text)\n",
+    "    return hashtags\n",
+    "\n",
     "def extract_links(text):\n",
     "    links = re.findall(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', text)\n",
     "    return links\n",
     "\n",
     "def preprocess_text(text):\n",
     "    text = text.lower()\n",
-    "    text = remove_emoji(text)\n",
+    "    # Extract hashtags\n",
+    "    hashtags = extract_hashtags(text)\n",
     "    # Remove links\n",
     "    text = re.sub(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', '', text)\n",
     "    # Remove special symbols and punctuation\n",
-    "    text = re.sub(r\"[^a-zA-Z0-9\\s]\", \"\", text)\n",
+    "    text = re.sub(r\"[^a-zA-Z0-9\\s#]\", \"\", text)\n",
     "    # Remove multiple consecutive spaces\n",
     "    text = re.sub(r'\\s{2,}', ' ', text)\n",
-    "    return text\n",
+    "    return text, hashtags\n",
     "\n",
     "texts = []\n",
+    "hashtags_list = []\n",
     "tweet_ids = []\n",
     "usernames = []\n",
     "links = []\n",
@@ -159,15 +185,16 @@
     "        text = tweet.retweeted_status.full_text\n",
     "    except AttributeError:\n",
     "        text = tweet.full_text\n",
-    "    preprocessed_text = preprocess_text(text)\n",
+    "    preprocessed_text, hashtags = preprocess_text(text)\n",
     "    extracted_links = extract_links(text)\n",
     "    texts.append(preprocessed_text)\n",
+    "    hashtags_list.append(hashtags)\n",
     "    tweet_ids.append(tweet.id)\n",
     "    usernames.append(tweet.user.screen_name)\n",
     "    links.append(extracted_links)\n",
     "\n",
-    "data = pd.DataFrame({\"tweet_id\": tweet_ids, \"username\": usernames, \"text\": texts, \"links\": links})\n",
-    "data.to_csv(\"fake_news_data.csv\", index=False)\n"
+    "data = pd.DataFrame({\"tweet_id\": tweet_ids, \"username\": usernames, \"text\": texts, \"hashtags\": hashtags_list, \"links\": links})\n",
+    "data.to_csv(\"news_data.csv\", index=False)\n"
    ]
   }
  ],
