add lime shap and analyze of infd

--- a/Project/Song Lin/openai_test.ipynb
+++ b/Project/Song Lin/openai_test.ipynb
@@ -135,6 +135,95 @@
     "print(labeled_df)\n",
     "labeled_df.to_csv(\"labeled_fake_news_data.csv\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conclusion and reasoning: The statement is not entirely true - while Donald Trump did send out an embarrassing New Year's Eve message, it is not clear that this is disturbing.\n",
+      "Conclusion and reasoning: The statement appears to be true based on the video clip that is included. In the video, George W. Bush condemns President Trump's response to the Charlottesville white supremacist rally, saying that Trump's words \"encouraged racial division.\"\n",
+      "Conclusion and reasoning: The statement is true. U.S. lawmakers have questioned businessman at the 2016 Trump Tower meeting.\n",
+      "Conclusion and reasoning: The statement is true. The Trump administration has issued new rules on U.S. visa waivers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openai\n",
+    "openai.api_key = \"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\"\n",
+    "\n",
+    "def is_statement_true_and_why(statement):\n",
+    "    prompt = f\"Please evaluate the truthfulness of the following statement and provide clear reasoning for your conclusion:\\n\\nStatement: {statement}\\n\\nEvaluation: \"\n",
+    "    \n",
+    "    response = openai.Completion.create(\n",
+    "        engine=\"text-davinci-002\",\n",
+    "        prompt=prompt,\n",
+    "        max_tokens=100,\n",
+    "        n=1,\n",
+    "        stop=None,\n",
+    "        temperature=0.5,\n",
+    "    )\n",
+    "\n",
+    "    answer = response.choices[0].text.strip()\n",
+    "    return answer\n",
+    "\n",
+    "# Example\n",
+    "sentences = [\"The moon is not made of cheese.\",\n",
+    "             \"The Earth is not flat.\",\n",
+    "             \"The United States declared independence from Great Britain in 1776.\",\n",
+    "             \"The average temperature in Antarctica is above freezing.\",\n",
+    "             \"Barack Obama is currently the President of the United States.\"]\n",
+    "sentences = [\"Donald Trump Sends Out Embarrassing New Year’s Eve Message; This is Disturbing\",\n",
+    "        \"WATCH: George W. Bush Calls Out Trump For Supporting White Supremacy\",\n",
+    "        \"U.S. lawmakers question businessman at 2016 Trump Tower meeting: sources\",\n",
+    "        \"Trump administration issues new rules on U.S. visa waivers\"\n",
+    "    ]\n",
+    "for statement in sentences:\n",
+    "\n",
+    "    result = is_statement_true_and_why(statement)\n",
+    "\n",
+    "    print(\"Conclusion and reasoning:\", result)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conclusion and reasoning: The statement is not entirely truthful. The viral post in question showed a young Jack Ma struggling to sell products in China. However, the post left out some important information, namely that Ma was eventually able to find success with his business. While the post is technically accurate, it doesn't tell the whole story, which makes it misleading.\n",
+      "Conclusion and reasoning: The statement is not true. Bill Gates is the son of a lawyer and a businesswoman.\n",
+      "Conclusion and reasoning: The statement is not true. There is no evidence to support the claim that a New York restaurant is serving human flesh.\n",
+      "Conclusion and reasoning: This statement is false. The cost of the Chinese bridge is not significantly different from the cost of the Statue of Unity.\n",
+      "Conclusion and reasoning: The statement is most likely true. The soldier in the photo does not look like the son of Israel's Prime Minister, and there is no reason to believe that the photo has been doctored.\n",
+      "Conclusion and reasoning: The statement is not true. Bruce Lee did not invent the game of ping-pong, nor did he invent the nunchaku.\n",
+      "Conclusion and reasoning: The statement is false. There is no evidence to support the claim that Japan built a bridge in 24 hours.\n",
+      "Conclusion and reasoning: The statement is true. The video in question is from a 2017 earthquake in Mexico, and it has been circulating online since then.\n",
+      "Conclusion and reasoning: The statement is true. The ballet performance by the Chinese couple went viral with the wrong claim that it was a traditional Chinese dance.\n",
+      "Conclusion and reasoning: The statement is true. The little boy in the picture is crossing into Jordan alone after losing his family in the Syria war.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the CSV file with ISO-8859-1 encoding\n",
+    "dataset = pd.read_csv('IFND.csv', encoding='ISO-8859-1')\n",
+    "\n",
+    "# Extract the 'Statement' column for the text data (X) and the 'Label' column for the labels (y)\n",
+    "sentences = dataset['Statement'][-10:]\n",
+    "for statement in sentences:\n",
+    "\n",
+    "    result = is_statement_true_and_why(statement)\n",
+    "\n",
+    "    print(\"Conclusion and reasoning:\", result)"
+   ]
   }
  ],
  "metadata": {
